--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ spigot {
     authors 'aleiv'
     apiVersion '1.16'
     version '0.1'
-    name 'CoreTemplate'
+    name 'RPManager'
     load STARTUP
     //depends = ['ProtocolLib']
 }
@@ -67,7 +67,6 @@ shadowJar {
     relocate 'co.aikar.locales', 'shadded.acf.locales'
     relocate 'acf-minecraft_', 'shadded.acf.properties.acf-minecraft_'
     relocate 'acf-core_', 'shadded.acf.properties.acf-core_'
-    relocate 'us.jcedeno.libs.rapidinv', 'com.yourpackage.rapidinv'
     
 }
 
